# speechcontrol

./: .gitignore  CMakeLists.txt  INSTALL  README  TODO  build.sh
cmake/: CMakeLists.txt  SpeechControlConfig.cmake.in  SpeechControlConfigVersion.cmake.in
src/: CMakeLists.txt  core.cpp  core.hpp  firstrunwizard.cpp  firstrunwizard.hpp  main.cpp  microphone.cpp  microphone.hpp  sphinx.hpp  training.cpp  training.hpp  user.cpp  user.hpp  windows_main.cpp  windows_main.hpp
src/app/: CMakeLists.txt  config.hpp  config.hpp.in  core.cpp  core.hpp  main.cpp  plugins.cpp  plugins.hpp  session.cpp  session.hpp
src/app/desktopcontrol/: CMakeLists.txt  agent.cpp  agent.hpp
src/app/dictation/: CMakeLists.txt  agent.cpp  agent.hpp
src/app/plugins/: CMakeLists.txt  factory.cpp  factory.hpp  plugins.cpp  plugins.hpp
src/app/sessions/: CMakeLists.txt  session.cpp  session.hpp
src/app/widgets/: microphonecombobox.cpp  microphonecombobox.hpp  session.cpp  session.hpp
src/app/windows/: CMakeLists.txt  bookmanager.hpp  main.cpp  main.hpp  sessionmanager.cpp  sessionmanager.hpp  settings.cpp  settings.hpp  training.cpp  training.hpp  usermanager.hpp
src/app/windows/managers/: CMakeLists.txt  books.cpp  books.hpp  session.cpp  session.hpp  user.cpp  user.hpp
src/app/wizards/: CMakeLists.txt  base.cpp  base.hpp  intro.cpp  intro.hpp  outro.cpp  outro.hpp
src/app/wizards/backup/: CMakeLists.txt  bckp_modeselect.cpp  bckp_modeselect.hpp  wizard.cpp  wizard.hpp
src/app/wizards/contents/: CMakeLists.txt  addselect.cpp  addselect.hpp  fileselect.cpp  fileselect.hpp  wikipage.cpp  wikipage.hpp  wizard.cpp  wizard.hpp
src/app/wizards/micsetup/: CMakeLists.txt  micselect.cpp  micselect.hpp  wizard.cpp  wizard.hpp
src/app/wizards/quickstart/: CMakeLists.txt  micpicker.cpp  micpicker.hpp  userinit.cpp  userinit.hpp  wizard.cpp  wizard.hpp
src/app/wizards/session-create/: CMakeLists.txt  wizard.cpp  wizard.hpp
src/app/wizards/voxforge/: CMakeLists.txt
src/lib/: CMakeLists.txt  acousticmodel.cpp  acousticmodel.hpp  corpus.cpp  corpus.hpp  dictionary.cpp  dictionary.hpp  microphone.cpp  microphone.hpp  python.cpp  sentence.cpp  sentence.hpp  sphinx.cpp  sphinx.hpp  system.cpp  system.hpp  training.cpp  training.hpp
src/python/: package.py  sample.py
src/windows/: bookmanager.cpp  main.cpp  main.hpp  settings.cpp  settings.hpp  usermanager.cpp
src/wizards/: intro.cpp  intro.hpp
src/wizards/backup/: wizard.hpp
src/wizards/micsetup/: micselect.cpp  micselect.hpp  wizard.cpp  wizard.hpp
src/wizards/quickstart/: micsetup.cpp  micsetup.hpp  optin.cpp  optin.hpp  wizard.cpp  wizard.hpp
src/wizards/session-create/: wizard.hpp
src/wizards/voxforge/: optin.cpp  wizard.cpp  wizard.hpp
ui/: CMakeLists.txt  firstrunwizard.ui  main.ui  res.qrc
ui/widgets/: microphonecombobox.ui  sessionwidget.ui
ui/windows/: main.ui  settings.ui  training.ui  usermanager.ui
ui/windows/managers/: book.ui  session.ui
ui/windows/settings/: dialog.ui  wizards.ui
ui/wizards/: base.ui  intro.ui  outro.ui
ui/wizards/backup/: backup.ui  bckp_modeselect.ui
ui/wizards/contents/: additionselectionpage.ui  cw_fileselectionpage.ui  cw_wikipage.ui
ui/wizards/micsetup/: micselect.ui  micsetup.ui
ui/wizards/quickstart/: micasksetup.ui  micpicker.ui  quickstart.ui  userinit.ui
ui/wizards/session-create/: session-create.ui
ui/wizards/voxforge/: optin.ui  voxforge.ui
