project(SpeechControlApplication-DesktopControl)
cmake_minimum_required(VERSION 2.8)

file(GLOB SPCHCNTRL_DESKTOPCONTROL_CPP "*.cpp")
file(GLOB SPCHCNTRL_DESKTOPCONTROL_HPP "*.hpp")

QT4_WRAP_CPP(SPCHCNTRL_DESKTOPCONTROL_CPP ${SPCHCNTRL_DESKTOPCONTROL_HPP})

list(APPEND SPCHCNTRL_APP_SCPP ${SPCHCNTRL_DESKTOPCONTROL_CPP})

install(FILES ${SPCHCNTRL_DESKTOPCONTROL_HPP}
    DESTINATION "${SPCHCNTRL_INCLUDE_DIR}/app/desktopcontrol"
    COMPONENT "dev")
