project(SpeechControlApplication-Dictation)
cmake_minimum_required(VERSION 2.8)

file(GLOB SPCHCNTRL_DICTATION_CPP "*.cpp")
file(GLOB SPCHCNTRL_DICTATION_HPP "*.hpp")

QT4_WRAP_CPP(SPCHCNTRL_DICTATION_CPP ${SPCHCNTRL_DICTATION_HPP})

list(APPEND SPCHCNTRL_APP_SCPP ${SPCHCNTRL_DICTATION_CPP})

install(FILES ${SPCHCNTRL_DICTATION_HPP}
    DESTINATION "${SPCHCNTRL_INCLUDE_DIR}/app/dictation"
    COMPONENT "dev")
