project(SpeechControlApplication-Plugins)
cmake_minimum_required(VERSION 2.8)

file(GLOB SPCHCNTRL_PLUGINS_CPP "*.cpp")
file(GLOB SPCHCNTRL_PLUGINS_HPP "*.hpp")

QT4_WRAP_CPP(SPCHCNTRL_PLUGINS_CPP ${SPCHCNTRL_PLUGINS_HPP})

list(APPEND SPCHCNTRL_APP_SCPP ${SPCHCNTRL_PLUGINS_CPP})

message("${SPCHCNTRL_APP_SCPP}")

install(FILES ${SPCHCNTRL_PLUGINS_HPP}
    DESTINATION "${SPCHCNTRL_INCLUDE_DIR}/app/plugins"
    COMPONENT "dev")
