project(SpeechControlApplication-Sessions)
cmake_minimum_required(VERSION 2.8)

file(GLOB SPCHCNTRL_SESSION_CPP "*.cpp")
file(GLOB SPCHCNTRL_SESSION_HPP "*.hpp")

QT4_WRAP_CPP(SPCHCNTRL_SESSION_CPP ${SPCHCNTRL_SESSION_HPP})

list(APPEND SPCHCNTRL_APP_SCPP ${SPCHCNTRL_SESSION_CPP})

install(FILES ${SPCHCNTRL_SESSION_HPP}
    DESTINATION "${SPCHCNTRL_INCLUDE_DIR}/app/sessions"
    COMPONENT "dev")
