project(SpeechControlApplication-Windows)
cmake_minimum_required(VERSION 2.8)

file(GLOB SPCHCNTRL_WINDOWS_CPP "*.cpp")
file(GLOB SPCHCNTRL_WINDOWS_HPP "*.hpp")

QT4_WRAP_CPP(SPCHCNTRL_WINDOWS_CPP ${SPCHCNTRL_WINDOWS_HPP})

list(APPEND SPCHCNTRL_APP_SCPP ${SPCHCNTRL_WINDOWS_CPP})

install(FILES ${SPCHCNTRL_WINDOWS_HPP}
    DESTINATION "${SPCHCNTRL_INCLUDE_DIR}/app/windows"
    COMPONENT "dev")
