project(SpeechControlApplication-WindowManager)
cmake_minimum_required(VERSION 2.8)

file(GLOB SPCHCNTRL_WINDOWS_MANAGERS_CPP "*.cpp")
file(GLOB SPCHCNTRL_WINDOWS_MANAGERS_HPP "*.hpp")

QT4_WRAP_CPP(SPCHCNTRL_WINDOWS_CPP ${SPCHCNTRL_WINDOWS_HPP})

list(APPEND SPCHCNTRL_WINDOWS_CPP ${SPCHCNTRL_WINDOWS_MANAGERS_CPP})

install(FILES ${SPCHCNTRL_WINDOWS_MANAGERS_HPP}
    DESTINATION "${SPCHCNTRL_INCLUDE_DIR}/app/windows/managers"
    COMPONENT "dev")