cmake_minimum_required(VERSION 2.8)

file(GLOB SPCHCNTRL_WIZARDS_VOXFORGE_CPP "*.cpp")
file(GLOB SPCHCNTRL_WIZARDS_VOXFORGE_HPP "*.hpp")

QT4_WRAP_CPP(SPCHCNTRL_WIZARDS_VOXFORGE_CPP ${SPCHCNTRL_WIZARDS_VOXFORGE_HPP})

list(APPEND SPCHCNTRL_APP_SCPP ${SPCHCNTRL_WIZARDS_VOXFORGE_CPP})

install(FILES ${SPCHCNTRL_WIZARDS_VOXFORGE_HPP}
    DESTINATION "${SPCHCNTRL_INCLUDE_DIR}/app/wizards/voxforge"
    COMPONENT "dev")
